<resources>
    <string name="app_name">GreenDefend</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboarding1">Find out the types of diseases Various plants</string>
    <string name="disception_onboarding1">Plant disease diagnosis is now within reach everyone</string>
    <string name="started_now">started now</string>
    <string name="title_onboarding2">Treat your plant from home security</string>
    <string name="disception_onboarding2">Plant treatment has become easier with the application</string>
    <string name="title_onboarding3">Provide plant specific treatment depending on the disease</string>
    <string name="disception_onboarding3">Find out the effective treatment of the plant with just a click in our application</string>
    <string name="next">Next</string>
    <string name="green">Green</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="or_through">Or through</string>
    <string name="phone_or_email">" Email"</string>
    <string name="send">Send</string>
    <string name="enter_code">Enter code</string>
    <string name="confirm">Confirm</string>
    <string name="account_has_been_created_successfully">account has been created successfully</string>
    <string name="you_can_browse_the_application_now_with_knowledge_about_farming">You can browse the application now with knowledge about farming</string>
    <string name="defend">Defend</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="know_your_plant_s_disease_and_treat_it_easily">Know the disease of your plant and treat it easily</string>
    <string name="threat">threat</string>
    <string name="upload_image">upload image</string>
    <string name="create_new_account">Create new account</string>
    <string name="enter_the_code_sent_to_the_email">Enter the code sent to the email</string>
    <string name="code_validation">code validation</string>
    <string name="weather_today">Weather today</string>
    <string name="february_3_new_damietta_city">February 3. New Damietta City</string>
    <string name="_18_c">18°C</string>
    <string name="sunset_5_30pm">Sunset 5.30pm</string>
    <string name="the_weather_is_cloudy_today_and_sunny_at_times_n_today_is_a_bad_day_to_use_pesticides">The weather is cloudy today, and sunny at times\n Today is a bad day to use pesticides</string>
    <string name="crop_information">Crop information</string>
    <string name="plant_diseases">Plant diseases</string>
    <string name="plant_observation">Plant observation</string>
    <string name="diagnostic_tips">Diagnostic tips</string>
    <string name="_1_bring_the_camera_close_to_the_plant_and_make_sure_that_the_disease_spreading_in_the_plant_is_visible_within_the_frame">1 - Bring the camera close to the plant and make sure that the disease spreading in the plant is visible within the frame</string>
    <string name="_2_make_sure_that_the_camera_correctly_shows_the_disease_present_in_the_plant">2- Make sure that the camera correctly shows the disease present in the plant</string>
    <string name="_3_make_sure_that_the_plant_is_visible_and_that_it_is_not_too_dark_or_too_bright">3- Make sure that the plant is visible and that it is not too dark or too bright</string>
    <string name="got_it">Got it</string>
    <string name="it_s_cloudy_today">It\'s cloudy today</string>
    <string name="today_is_a_bad_day_to_use_pesticides">Today is a bad day to use pesticides</string>
    <string name="weather_for_the_coming_days">Weather for the coming days</string>
    <string name="ask_the_community">Ask the community</string>
    <string name="add_image">Add image</string>
    <string name="ask_the_community_and_receive_answers_from_experts">Ask the community and receive answers from experts</string>
    <string name="add_a_question_indicating_the_problem_facing_your_crop">Add a question indicating the problem facing your crop</string>
    <string name="what_does_it_take_for_a_potato_to_grow_well_knowing_that_it_has_about_50_days_in_yellowing_of_leaves">What does it take for a potato to grow well, knowing that it has about 50 days? In yellowing of leaves</string>
    <string name="enter_the_required_data_below">Enter the required data below</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_middle_name">Enter middle name</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="profile">profile</string>
    <string name="home">home</string>
    <string name="forum">Forum</string>
    <string name="search_the_forum">Search the forum</string>
    <string name="please_allow_permission_on_camera">please allow permission on camera</string>
    <string name="green_defend">Green Defend</string>
    <string name="finished">Finished</string>
    <string name="enter_name">Enter Name</string>
    <string name="give_an_introduction_about_yourself_to_others">Give an introduction about yourself to others</string>
    <string name="chage">Chage</string>
    <string name="treat_your_plant_safely_with_growers_of_the_world">Treat your plant safely with growers of the world</string>
    <string name="share_green_defend_with_your_friends_and_help_develop_agriculture_and_plant_protection">Share Green Defend with your friends and help develop agriculture and plant protection</string>
    <string name="share_green_defend">Share Green Defend</string>
    <string name="we_want_to_hear_your_ideas_and_suggestions">We want to hear your ideas and suggestions</string>
    <string name="leave_a_rating">Leave a rating</string>
    <string name="show_more">Show More</string>
    <string name="weather_prediction">weather prediction</string>
    <string name="no_rain_is_expected_this_week">No rain is expected this week</string>
    <string name="treat_your_plant_safely">Treat your plant safely with growers of the world</string>
    <string name="rate_the_green_defend_app">Rate the Green Defend app</string>
    <string name="checking">Checking</string>
    <string name="enter_email">Enter Email</string>
    <string name="full_name">Full Name</string>
    <string name="i_agree_to_send_the_latest_offers_from_the_green_defend_application">I agree to send the latest offers from the Green Defend application</string>
    <string name="user_name">User Name</string>
    <string name="introduce_yourself_to_others">Introduce yourself to others</string>
    <string name="always_be_happy">Always be happy</string>
    <string name="country">Country</string>
    <string name="diagnostic_results">Diagnostic results</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="communication">Communication</string>
    <string name="please_enter_code">Please Enter Code</string>
    <string name="q1_1">What are the main vegetables grown in the world?</string>
    <string name="a1_1">The main vegetables grown in global cuisine include rice, corn, barley, potatoes, peanuts, beans, cotton, and sugars</string>
    <string name="q2_1">What are the types of microenvironments for vegetable growth?</string>
    <string name="a2_1">Vegetables vary in their basic elements, but in general they need a wide variety of nutrients in large quantities and sunlight in general</string>
    <string name="q3_1">What is the component you want in vegetable yield?</string>
    <string name="a3_1">Many factors affect crop productivity, including conditions, soil, fertilization, water management, pests and diseases</string>
    <string name="q4_1">What is the importance of vegetable diversity in agriculture?</string>
    <string name="a4_1">Versatile in improving soil health, preventing diseases and pests, increasing biodiversity, and improving the health of agricultural systems</string>
    <string name="q5_1">How can farmers control crops with pests and diseases?</string>
    <string name="a5_1">Farmers can protect crops from pests by using advanced agricultural techniques, such as sub-agriculture and chemical application by specialists, adhering to agricultural principles, and adopting integrated management practices</string>
    <string name="q6_1">What is the importance of using supplements in crop farming?</string>
    <string name="a6_1">It helps to reduce modern quantities such as hydroponics, climate glass, and modern agriculture in comprehensively increasing and reducing resources such as water and agricultural areas</string>
    <string name="q7_1">What items do you want for the quality of your crops?</string>
    <string name="a7_1">There are many factors that affect the quality of crops, such as soil, climate, fertilization, agricultural care, and sound agricultural practices</string>
    <string name="q8_1">How can farmers improve crop quality? </string>
    <string name="a8_1">Farmers can improve crop quality by selecting multi-insulation elements, providing necessary protection for plants such as irrigation and fertilization, and effectively managing pests and diseases</string>
    <string name="q9_1">What are the basic steps for growing vegetables successfully?</string>
    <string name="a9_1">The basic steps include choosing the appropriate site, preparing the soil, additional finer parts, necessary protection for the plants, etc. for growth and development</string>
    <string name="q10_1">What future challenges might crop cultivation face?</string>
    <string name="a10_1">Among the challenges that will change in the future are the shortage of water resources, changes in the causes of diseases and damages, and the demand for growing population crops</string>
    <string name="q11_1">What is the importance of genetic diversity in vegetables?</string>
    <string name="a11_1">Genetic diversity helps highlight the diversity of variations and circumstances of young players, and also contributes to highlighting diversity such as diversity and quality</string>
    <string name="q12_1">How can farmers determine the best crops to grow in their area?</string>
    <string name="a12_1">Farmers can obtain local climate and breeding data, consult with nutritional experts, and examine various types of vegetables that grow well in their area</string>
    <string name="q13_1">What technology is used in crop improvement?</string>
    <string name="a13_1">The technology used includes developing weather-resistant seeds, small-scale conditions, cutting-edge technology, logo-post-small, and artificial intelligence applications</string>
    <string name="q14_1">What materials are used to control pests and diseases using pesticides?</string>
    <string name="a14_1">Its uses include the use of insect pests, bumblebees, as well as beneficial fungi, permaculture, crop insects, and organic farming techniques</string>
    <string name="q15_1">What are the benefits of practicing farming and cropping practices?</string>
    <string name="a15_1">Practicing farming practices, naturally maintain good health, the effects of climate change, improve the quality of crops and improve their resistance to pests and diseases</string>
    <string name="q16_1">What is the importance of smart crop cultivation in improving crop production? </string>
    <string name="change_password">Change Password</string>
</resources>