<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/forumFragment"
        android:icon="@drawable/fourm_icon_black"
        android:title="@string/forum" />
    <item
        android:id="@+id/changePasswordFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_settings_24"

        android:title="@string/change_password"


        />
    <item
        android:id="@+id/logoutFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/logout"
        android:title="@string/logout" />


</menu>


