<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/homeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:id="@+id/forumFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/baseline_forum"
        android:title="@string/forum" />
</menu>