<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnostic_tips"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_bring_the_camera_close_to_the_plant_and_make_sure_that_the_disease_spreading_in_the_plant_is_visible_within_the_frame"
            android:textColor="#CC000000"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_make_sure_that_the_camera_correctly_shows_the_disease_present_in_the_plant"
            android:textColor="#CC000000"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_make_sure_that_the_plant_is_visible_and_that_it_is_not_too_dark_or_too_bright"
            android:textColor="#CC000000"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            />
<Button
    android:id="@+id/btn_go"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/got_it"
    android:layout_gravity="center"
    android:backgroundTint="#39C58A"
    android:background="@drawable/button_green"
    android:layout_margin="10dp"
    />

    </LinearLayout>

</androidx.cardview.widget.CardView>