<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.homing.weatherFragment.WeatherFragment"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:adjustViewBounds="true"
        android:background="@drawable/shape_toolbar"
        app:navigationIcon="@drawable/baseline_menu_24"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/weather_prediction"
                android:textSize="20sp"
                android:textStyle="bold"

                android:gravity="center_vertical"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/baseline_arrow_forward_24"
 android:layout_margin="10dp"
    android:contentDescription="back"
    tools:ignore="HardcodedText" />


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="#B0DEEC"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/february_3_new_damietta_city"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/img_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mdi_weather_night"
                    android:padding="20dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txt_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/_18_c"
                    android:textSize="50sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txt_sun"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sunset_5_30pm"
                android:textColor="#CC000000"
                android:textSize="20sp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
    android:id="@+id/txt_noteSun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_margin="10dp"
        android:text="@string/it_s_cloudy_today"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txt_weatherAgriculture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/today_is_a_bad_day_to_use_pesticides"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#80000000"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_for_the_coming_days"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
       />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/row_weather"
        tools:itemCount="2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_rain_is_expected_this_week"
        android:layout_margin="10dp"
        android:textSize="20sp"

        android:textColor="@color/black"/>



</LinearLayout>