<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.homing.AskingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:adjustViewBounds="true"
        android:background="@drawable/shape_toolbar"
        app:navigationIcon="@drawable/baseline_menu_24">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/ask_the_community"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="back"
                android:src="@drawable/baseline_arrow_forward_24"
                tools:ignore="HardcodedText" />


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btn_addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/button_design"
        android:padding="10dp"
        android:text="@string/add_image"
        android:textAllCaps="false"
        android:textColor="#B3000000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#E4F0E9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_the_community_and_receive_answers_from_experts"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_a_question_indicating_the_problem_facing_your_crop"
       android:gravity="center"
        />
</com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorToolbar"
        android:background="@drawable/button_design"
        android:padding="10dp"
        android:text="@string/send"

        android:textAllCaps="false"
        android:textColor="#B3000000"

        android:textStyle="bold" />


</LinearLayout>